# trytond-issue12884

./: pyproject.toml  tox.ini
src/issue12884/: __init__.py  tryton.cfg
