[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trytond-issue12884"
authors = [{name = "Ningú", email = "47453810+n1ngu@users.noreply.github.com"}]
version = "1.0.0"
description = "See https://foss.heptapod.net/tryton/tryton/-/issues/12884"

[project.entry-points."trytond.modules"]
issue12884 = "issue12884"

[tool.flit.module]
name = "issue12884"
